--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
