--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.0",
+    "jspdf": "^2.5.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
