--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.23.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.7",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.4"
